@@ -2750,8 +2750,12 @@ function wfMakeUrlIndex( $url ) {
 			$domainpart = '';
 		}
 		$reversedHost = $domainpart . '@' . $mailparts[0];
-	} else {
+	} else if ( isset( $bits['host'] ) ) {
 		$reversedHost = strtolower( implode( '.', array_reverse( explode( '.', $bits['host'] ) ) ) );
+	} else {
+		// In file: URIs for instance it's common to have an empty host,
+		// which turns up as not getting a 'host' member from parse_url.
+		$reversedHost = '.';
 	}
 	// Add an extra dot to the end
 	// Why? Is it in wrong place in mailto links?
@@ -2766,6 +2770,13 @@ function wfMakeUrlIndex( $url ) {
 		$index .= ':' . $bits['port'];
 	}
 	if ( isset( $bits['path'] ) ) {
+		// parse_url() removes the initial '/' from the path
+		// for file: URLs with Windows-style paths, such as
+		// file:///c:/windows/stuff. We need to add it back
+		// to keep our division between host and path properly.
+		if ( strlen( $bits['path'] ) > 0 && substr( $bits['path'], 0, 1 ) !== '/' ) {
+			$index .= '/';
+		}
 		$index .= $bits['path'];
 	} else {
 		$index .= '/';
