@@ -243,6 +243,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 28532) wfMsgExt() and wfMsgWikiHtml() use $wgOut->parse()
 * (bug 16129) Transcluded special pages expose strip markers when they output parsed messages
 * (bug 27249) "Installed software" table in Special:Version should always be left-to-right
+* (bug 28627) External link normalization now handles file: URL cases without
+  throwing notice warnings.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
